<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegisterFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/GridLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="8"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            tools:context=".GridXMLActivity" >

            <TextView
                android:id="@+id/server_host_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_host" />

            <EditText
                android:id="@+id/server_host_field"
                android:layout_gravity="left|top"
                android:layout_width="275sp"/>

            <TextView
                android:id="@+id/server_port_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_port" />

            <EditText
                android:id="@+id/server_port_field"
                android:layout_width="275sp"
                android:layout_gravity="left|top" />

            <TextView
                android:id="@+id/user_name_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/user_name_field"
                android:layout_width="275sp"
                android:layout_gravity="left|top" />

            <TextView
                android:id="@+id/password_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="275sp"
                android:layout_gravity="left|top" />

            <TextView
                android:id="@+id/first_name_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/first_name_field"
                android:layout_width="275sp"
                android:layout_gravity="left|top" />

            <TextView
                android:id="@+id/last_name_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/last_name_field"
                android:layout_width="275sp"
                android:layout_gravity="left|top" />

            <TextView
                android:id="@+id/email_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="275sp"
                android:layout_gravity="left|top" />

            <TextView
                android:id="@+id/gender_text"
                android:layout_gravity="right|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />
                <RadioButton android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>


        </GridLayout>

        <GridLayout
            android:id="@+id/GridLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal">

            <Button android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <Button android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </GridLayout>

    </LinearLayout>

</FrameLayout>